<b>2011-02-03</b>

* Bugfix: Facebook updates should work again (thanks Niko!)

<b>2010-11-30</b>

* Optimized/compressed images, JavaScript, CSS with Zoompf for faster loading

<b>2010-11-22</b>

* Bugfix: FlightMemory import check for non-IATA airlines broken
* Bugfix: Some FlightMemory dates incorrectly parsed to include 00:00:00 timestamps

<b>2010-11-11</b>

* Migrated FlightMemory import code to phpQuery
* Bugfix: FlightMemory imports with non-ASCII characters fail (2824341) 
* Bugfix: Use correct UTF-8 byte order mark in CSV exports
* Bugfix: CSV imports handled middle seats incorrectly sometimes

<b>2010-10-24</b>

* New "All" option in Top X, implements More than Top 50 in "Top 10" section (3089206)
* Bugfix: Banner in miles instead of kilometers (3091634)

<b>2010-10-16</b>

* Dates and times can now be entered without separators (3074343)
* Bugfix: Error after connecting to facebook app (with different user) (3084823)

<b>2010-08-22</b>

* Bugfix: Password sometimes exposed in URL after login (2915139)
* SQL optimization for banner generation, user status up/downgrades

<b>2010-08-14</b>

* Facebook app reworked to use application tab instead of profile box

<b>2010-07-10</b>

* Bugfix: E-mail address validation is too strict (3026793)

<b>2010-06-15</b>

* Bugfix: Facebook fatal error when adding app (3014614)
* Bugfix: BHD (Belfast City Airport) won't display (3015921)

<b>2010-05-04</b>

* Feature: Automated password resets (2915137)
* Bugfix: Unable to change password (2918400)

<b>2010-04-24</b>

* Bugfix: Wrong airport listed in Analyze -> Airport Records (2982048)
* Bugfix: Arrival time overwritten if airports entered afterwards (2986989)
* YYYY-MM-DD format now used consistently for dates
* Test cases updated

<b>2010-04-15</b>

* Bugfix: Flight duration shown as NaN and won't allow saving the flt (2986974)

<b>2010-04-07</b>

* Bugfix: Trip edit/delete broken (2823849)
* Bugfix: DST computed correctly for first day

<b>2010-02-17</b>
